# BSUIR

./: .gitignore
BSUIR 2 SEM/programing/practice/: CMakeLists.txt  main.c  Отчет по практике. Умножение(Алгоритм Рота).docx
BSUIR 2 SEM/programing/ОАиП/4 ЛАБА/: main.cpp
BSUIR 2 SEM/programing/ОАиП/5 ЛАБА/: main.cpp
BSUIR 2 SEM/programing/ОАиП/6 ЛАБА/: CMakeLists.txt  main.cpp
BSUIR 2 SEM/programing/ОАиП/7 ЛАБА/: CMakeLists.txt  huffman.h  main.cpp
BSUIR 2 SEM/programing/ОАиП/8 ЛАБА/: CMakeLists.txt
BSUIR 2 SEM/programing/ОАиП/untitled11/: main.cpp
BSUIR 2 SEM/programing/ОАиП/ДОП К 6 ЛАБЕ/: CMakeLists.txt  main.cpp
BSUIR 2 SEM/programing/ОАиП/ДОП К 7 ЛАБЕ 1/: main.cpp
BSUIR 2 SEM/programing/ОАиП/ДОП К 7 ЛАБЕ 2/: CMakeLists.txt  main.cpp
BSUIR 2 SEM/programing/ОАиП/ДОПК 8 ЛАБЕ/: CMakeLists.txt  main.cpp
BSUIR 3 SEM/programing/Sem Project/: a1.vsd  a2.vsd  Ведомость документов.vsd  ПЗ2.docx  диаграмма классов.vsdx  структурная.vsd
BSUIR 3 SEM/programing/Ассемблер/: lab1COM.asm  lab1EXE.asm  lab2.asm  lab3_var4.asm  lab3_var4_report.docx  lab4.asm  lab5.asm  lab7.asm  laba2.asm  laba4.asm  mini.txt  Отчёт7.docx  лаба-4.docx
BSUIR 3 SEM/programing/Ассемблер/asm_lab6/: buildAndRun.bat  main.cpp
BSUIR 3 SEM/programing/ПНаЯВУ/SOBOL/: CMakeLists.txt  main.cpp
BSUIR 3 SEM/programing/ПНаЯВУ/Sem Project/read/: CMakeLists.txt  addshelfdialog.cpp  addshelfdialog.h  addshelfdialog.ui  baseentity.cpp  baseentity.h  book.cpp  book.h  customapplication.cpp  customapplication.h  database.cpp  database.h  fb2helper.cpp  fb2helper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readbook.cpp  readbook.h  readbook.ui  reading.cpp  reading.h  reading.ui  script.sql  selectbookstoshelf.cpp  selectbookstoshelf.h  selectbookstoshelf.ui  shelf.cpp  shelf.h  shelfbooks.cpp  shelfbooks.h  shelfbooks.ui  shelveslist.cpp  shelveslist.h  shelveslist.ui  uihelper.cpp  uihelper.h
BSUIR 3 SEM/programing/ПНаЯВУ/lab1/: CMakeLists.txt  HashTable.cpp  HashTable.h  InputHelper.cpp  InputHelper.h  Menu.cpp  Menu.h  MySet.cpp  MySet.h  RandomCredentialsGenerator.cpp  RandomCredentialsGenerator.h  User.cpp  User.h  UserService.cpp  UserService.h  main.cpp
BSUIR 3 SEM/programing/ПНаЯВУ/lab3/: CMakeLists.txt  Cryption.h  Decryption.cpp  Elections.cpp  GameService.cpp  GameService.h  Menu.cpp  Potion.h  Resource.h  Weapon.h  main.cpp
BSUIR 3 SEM/programing/ПНаЯВУ/lab3/game/: Decryption.h  Elections.h  Encryption.cpp  Encryption.h  InputHelper.h  Item.cpp  Item.h  Menu.h  OutputHelper.cpp  OutputHelper.h  Potion.cpp  Resource.cpp  Weapon.cpp
BSUIR 3 SEM/programing/ПНаЯВУ/lab4_dop/: CMakeLists.txt  main.cpp
BSUIR 3 SEM/programing/ПНаЯВУ/lab5_dop/: CMakeLists.txt  main.cpp
BSUIR 3 SEM/programing/ПНаЯВУ/lab5_dop77/: CMakeLists.txt  main.cpp
BSUIR 3 SEM/programing/ПНаЯВУ/lab7/: BinFile.cpp  BinFile.h  CMakeLists.txt  OutFile.cpp  OutFile.h  Student.cpp  Student.h  TxtFile.cpp  TxtFile.h  main.cpp
BSUIR 3 SEM/programing/ПНаЯВУ/laba6/: main.cpp
BSUIR 3 SEM/programing/ПНаЯВУ/parll/: CMakeLists.txt  main.cpp
BSUIR 3 SEM/programing/ПНаЯВУ/sobel/: CMakeLists.txt  file_operations.cpp  file_operations.h  macros.h  main.cpp  sobel.cpp  sobel.h
BSUIR 3 SEM/programing/ПНаЯВУ/untitled/: main.cpp
BSUIR 4 SEM/programing/APK/LAB1/: LAB1-3NE.CPP  LAB1-STEP1.cpp  Лаба №1.docx
BSUIR 4 SEM/programing/APK/LAB2/: LAB2.cpp  Лаба №2.docx
BSUIR 4 SEM/programing/APK/LAB3/: LAB3.cpp  Лаба №3.docx
BSUIR 4 SEM/programing/APK/LAB4/: LAB4.cpp  Лаба №4.docx
BSUIR 4 SEM/programing/APK/LAB5/: Laba5.cpp  asci.docx  Лаба №5.docx
BSUIR 4 SEM/programing/APK/LAB6/: LAB6.asm  build.bat  Лаба №6.docx
BSUIR 4 SEM/programing/Sem Project/fat32/: Controller.h  Drive.h  main.cpp
BSUIR 4 SEM/programing/ОСиСП/lab1/: dirwalk  lab1.c
BSUIR 4 SEM/programing/ОСиСП/lab2/: Makefile.mk  child.c  parent.c
BSUIR 4 SEM/programing/ОСиСП/lab3/: Makefile.mk  child.c  parent.c
BSUIR 4 SEM/programing/ОСиСП/lab4/: Buffer.c  Buffer.h  main.c  makefile.mk
BSUIR 4 SEM/programing/ОСиСП/lab6/: main.c  makefile.mk  soure_index.c
BSUIR 4 SEM/programing/ОСиСП/lab7/: func.cpp  func.hpp  main.cpp
(+177 files in other folders)
